Fixing word wrap.  Updating styling.

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,7 +1,9 @@
 #decoders {
   overflow: hidden;
   #inputs{
-    margin: 20px auto;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 500px;
     .left-col {
       float: left;
@@ -13,12 +15,12 @@
     }
   }
   #symbols, #encoder {
-    display: inline-block;
+    position: absolute;
+    top: 20px;
     text-align: center;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: bold;
     border: 1px solid #aaa;
-    margin: 10px 0 10px 20px;
     border-radius: 5px;
     .title {
       text-decoration: underline;
@@ -34,8 +36,8 @@
     }
   }
   #symbols {
-    width: 20%;
-    float: left;
+    width: 310px;
+    left: 20px;
     .symbol-holder {
       .letter {
         display: inline-block;
@@ -51,20 +53,22 @@
     }
   }
   #encoder {
-    width: 70%;
+    left: 350px;
+
     .title {
       margin-bottom: 50px;
     }
-    .encoder-holder {
-      display: inline-block;
-      padding: 15px;
-      padding-top: 50px;
-      &.space {
-        visibility: hidden;
-        width: 1em;
-      }
-      .entry {
-        border-bottom: 1px solid #333;
+    .words {
+      .word {
+        display: inline-block;
+        padding: 15px;
+        padding-top: 50px;
+        .letter {
+          border-top: 1px solid #333;
+          display: inline-block;
+          padding: 10px;
+          margin: 0 5px;
+        }
       }
     }
   }
